2015-02-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_crop.m: (0.3.0)

	- Generalize function to 1D to 4D, as we are going to be using
	3D+t volumes.

	- Fix bugs from last commit.

	- Ben added as author, not as doing modifications.

	- Remove unused fields inherited from the scirunnrrd struct,
	e.g. scimat.axis.max.

	* matlab/FileFormatToolbox/scimat_save.m: (0.6.4)

	- Rename variable scirunnrrd as scimat, as it's more clear for
	other file formats that are not the Seg3D matlab format.

	- Fix the help header, that was too Seg3D-oriented.

	- When we save to Seg3D matlab format, remove the new rotation
	matrix field, if necessary.

	* matlab/FileFormatToolbox/scimat_load.m: (0.4.5)

	- Remove fields from scirunnrrd that are unused in scimat.

	- Add default rotation matrix field.

	* matlab/FileFormatToolbox/scimat_im2scimat.m: (0.3.0)

	- Add input argument for rotation matrix.

	- Remove unused fields that were a legacy from scinrrd. We don't
	need them, and shouldn't be part of scimat.

	* matlab/FiltersToolbox/scimat.m: (0.2.0)

	- Rewrite, as we are going to be using rotation matrices and 3D+t
	volumes regularly.

2015-02-11  Benjamin Villard  <b.0134@gmail.com>

	- Added the offset for the position of the pixel coordinates in
	regards to the 'min' field. Previously the coordinates gave the
	centre of the voxel/pixel.

2015-02-10  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/CMakeLists.txt: (0.2.7)

	- Add Darryl's forward_TV_mex() function to the build system.

2014-02-06  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/DiffusionMRIToolbox/wild_bootstrapping_DTI.m (0.1.2)

	- Now returns cone of uncertainty for 2nd and 3rd eigenvectors
	too.

2015-01-29  Benjamin Villard <b.016434@gmail.com>

	* matlab/FilesFormatToolbox/dcm2scimat.m (0.2.0)

	- Modified dcm2scimat.m Added temporal dimension to the axis
	properties.

2015-01-29  Benjamin Villard <b.016434@gmail.com>
